--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,15 +19,20 @@ jobs:
           node-version: '22'
           cache: 'npm'
 
+      - name: Cache NPM dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-npm-cache-
+
       - name: Install dependencies
+        env:
+          HUSKY: 0
         run: |
           cd apps/sinlessgames-ui
           npm install
-
-      - name: Set up Husky
-        run: |
-          cd apps/sinlessgames-ui
-          npx husky init
 
       - name: Build the app
         run: |
