--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,12 +17,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Cache NPM dependencies
         uses: actions/cache@v1
         with:
-          path: ~/.npm
+          path: ~/.pnpm
           key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.OS }}-npm-cache-
@@ -32,11 +32,11 @@ jobs:
           HUSKY: 0
         run: |
           cd apps/sinlessgames-ui
-          npm install
+          pnpm install
 
       - name: Build the app
         run: |
-          npx nx build sinlessgames-ui --output-path=dist/apps/sinlessgames-ui
+          pnpx nx build sinlessgames-ui --output-path=dist/apps/sinlessgames-ui
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
