--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -81,6 +81,8 @@ jobs:
           NEW_VERSION="$MAJOR.$MINOR.$((PATCH + 1))"
           echo "New version: $NEW_VERSION"
 
+          echo "NEW_VERSION=$NEW_VERSION' >> $GITHUB_ENV
+
           # Compare the previous version with the version from package.json
           VERSIONS_MATCH=false
           if [ "$PACKAGE_VERSION" == "${{ env.PREVIOUS_VERSION }}" ]; then
