--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -80,8 +80,7 @@ jobs:
           # Create the new version
           NEW_VERSION="$MAJOR.$MINOR.$((PATCH + 1))"
           echo "New version: $NEW_VERSION"
-
-          echo "NEW_VERSION=$NEW_VERSION' >> $GITHUB_ENV
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
 
           # Compare the previous version with the version from package.json
           VERSIONS_MATCH=false
