--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: 'refs/heads/main' # Replace 'main' with your default branch name
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
